; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_interpolation.c_filter_quadratic.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_interpolation.c_filter_quadratic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double)* @filter_quadratic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @filter_quadratic(double %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca double, align 8
  %4 = alloca double, align 8
  store double %0, double* %3, align 8
  %5 = load double, double* %3, align 8
  %6 = fcmp olt double %5, 0.000000e+00
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load double, double* %3, align 8
  %9 = fneg double %8
  br label %12

10:                                               ; preds = %1
  %11 = load double, double* %3, align 8
  br label %12

12:                                               ; preds = %10, %7
  %13 = phi double [ %9, %7 ], [ %11, %10 ]
  store double %13, double* %4, align 8
  %14 = load double, double* %4, align 8
  %15 = fcmp ole double %14, 5.000000e-01
  br i1 %15, label %16, label %22

16:                                               ; preds = %12
  %17 = load double, double* %4, align 8
  %18 = fmul double -2.000000e+00, %17
  %19 = load double, double* %4, align 8
  %20 = fmul double %18, %19
  %21 = fadd double %20, 1.000000e+00
  store double %21, double* %2, align 8
  br label %34

22:                                               ; preds = %12
  %23 = load double, double* %4, align 8
  %24 = fcmp ole double %23, 1.500000e+00
  br i1 %24, label %25, label %33

25:                                               ; preds = %22
  %26 = load double, double* %4, align 8
  %27 = load double, double* %4, align 8
  %28 = fmul double %26, %27
  %29 = load double, double* %4, align 8
  %30 = fmul double 2.500000e+00, %29
  %31 = fsub double %28, %30
  %32 = fadd double %31, 1.500000e+00
  store double %32, double* %2, align 8
  br label %34

33:                                               ; preds = %22
  store double 0.000000e+00, double* %2, align 8
  br label %34

34:                                               ; preds = %33, %25, %16
  %35 = load double, double* %2, align 8
  ret double %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
